@@ -32,6 +32,7 @@ ChangeLog
     * Added free_space attribute for INFO, MEDIUM_INSERTED and FILE_CHANGED events
     * Added last_updated attribute to Mount class
     * new stop_loop method
+    * inotify_handler is not call in Printer.loop
 
 0.2.0 (2020-12-14)
 
